# TeleService

./: .gitignore  DISCORDBOT_SAVING.md  Dockerfile  FINAL_SUMMARY.md  Makefile  REFACTORING_SUMMARY.md  TELEGRAMBOT_SAVING.md  TODO  docker-compose.yml  pyproject.toml  shared.py  supervisord.conf  test_discordbot_saving.py  test_integration.py  test_telegrambot_saving.py
database/: README.md  connection.py  main.py  managers.py  models.py
discordbot/: Dockerfile  MUSIC_COMMANDS.md  README.md  config.py  main.py
discordbot/handlers/: __init__.py  music_commands.py  music_player.py  music_ui.py  music_utils.py  voice_state_handler.py
domain/: __init__.py  models.py
domain/entities/: __init__.py  feature.py  message.py
domain/repositories/: __init__.py  base.py  feature_repository.py  message_repository.py
domain/services/: __init__.py  feature_service.py  message_service.py
providers/: __init__.py  config.py  factory.py  groq.py  serp.py  zai.py
steam/: Dockerfile  config.py  main.py
telegrambot/: Dockerfile  main.py
telegrambot/handlers/: catch_all.py  commands.py  kinds.py  media.py  media_logger.py  message_logger.py  text.py  transcription.py  utils.py
